fix a z-index issue

--- a/public/src/css/layout/slideshoweditor.css
+++ b/public/src/css/layout/slideshoweditor.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    z-index: 0;
+    z-index: 10;
 }
 .slideshow-content {
     display: inline-block;
@@ -12,7 +12,6 @@
     height: 6em;
     background: var(--background-color-semidark);
     font-size: 1em;
-    z-index: 2;
 }
 .slideshow-content .add {
     box-sizing: border-box;
@@ -95,7 +94,7 @@
     .slideshow-content div.play-icon {
         position: absolute;
         top: 0;
-        z-index: 10;
+        /*z-index: 10;*/
     }
 }
 
@@ -241,7 +240,6 @@
     display: block;
     position: relative;
     background: var(--background-color-semidark);
-    z-index: 2;
 }
 .contentitem.placeholder {
     background: var(--font-color-gray);
@@ -260,7 +258,7 @@
     left: .3em
 }
 div.play-icon {
-    position: absolute;
+    /*position: absolute;*/
 }
 
 /*tooltip*/
@@ -280,7 +278,6 @@ div.play-icon {
     color: #fff;
     font-size: 0.7em;
     text-align: center;
-    z-index: 1;
 }
 .checkboxes .tooltip::after {
     position: absolute;
